4.2. Поиск дубликатов.